--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="portfolio_Cristian_Josafat_Flores_Ramirez_Desarrollador_iOS"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.ico" />
+    <script src="https://kit.fontawesome.com/a0e9b5e312.js" crossorigin="anonymous"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
